<resources>

    <string name="app_name">1</string>
    <string name="zoomin">Zoom In</string>
    <string name="zoomout">Zoom Out</string>
    <string name="reset">Reset</string>
    <string name="setting">OSC Setting</string>
    <string name="init">Init</string>
    <string name="keyboard">Keyboard Interface</string>
    <string name="lock">Lock</string>
    <string name="keyboard_activity">Keyboard Activity</string>
    <string name="multi_activity">Multi Activity</string>
    <string name="multi_keyboard_activity">Multi Keyboard Activity</string>

</resources>
